Fixed the scrollbar showing over the header, made a bunch of buff tests and got them all passing.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,11 +27,14 @@ body {
 
 h2 {
 	font-size: 1em;
-	text-align: center;
 	margin: 0;
 	margin-bottom: 0.25em;
 	padding: 0.25em 0;
 	border-bottom: 2px solid #fff8;
+	text-align: left;
+	text-transform: uppercase;
+	font-weight: 100;
+	margin-top: 1em;
 }
 
 .d-glyph {
